--- a/kernel-patches/README
+++ b/kernel-patches/README
@@ -8,3 +8,18 @@ contact me. Since I'm using 2.4, I may have working ones for them.
 If you're using kernel 2.6, I'd happy to hear about wether Fair NAT
 works there or not in general. I have no patches for 2.6 at all,
 I don't even know if they're still required.
+
+--- List of patches: ---
+ttl-2.4.18:     Adds TTL target support. Allows modifying of TTL
+                (time to live) value of outgoing packets.
+sfq:            Will reduce queue length to 16.
+psched:         Will use CPU timing instead of JIFFIES.
+                Probably fixes some accuracy issues.
+htb:            Disables HTB_HYSTERIES. May result in lower latency,
+                but slightly lower rates too.
+
+---
+Note: All patches are optional. The script works without them,
+      although you may get an error message here or there.
+      I recommend using the patches since I get better performance with them.
+      However use them at your own risk only in any case.
