--- a/CHANGELOG
+++ b/CHANGELOG
@@ -65,3 +65,6 @@
     - Use different class structures. (CLASS_MODE)
 
   Added 'Wondershaper'-alike class structure (CLASS_MODE="wonder").
+---- 2004-05-13 ---- v0.75 ---- Andreas Klauer ----
+  New hacks: HTB_MPU and HTB_OVERHEAD
+  I label them hacks because these require a special patched tc binary.
